--- a/thereseWebPage.Core/thereseWebPage.Core.csproj
+++ b/thereseWebPage.Core/thereseWebPage.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NSwag.AspNetCore" Version="13.10.8" />
+  </ItemGroup>
+
 </Project>
